# spkg

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: config.hxx  context.hxx  json.hxx  log.hxx  package.hxx  persist.hxx  specifier.hxx  spkg.hxx
inc/json/: parser.hxx
src/: command.cxx  context.cxx  help.cxx  install.cxx  json.cxx  list.cxx  main.cxx  package.cxx  path.cxx  remove.cxx  specifier.cxx  spkg.cxx  update.cxx
src/json/: parser.cxx
